# viact-cv-test

./: README.md  pyproject.toml  research.ipynb  test.py
result/: ship_new_test-e2e_res.tiff  ship_new_test_horizon.tiff  ship_new_test_horizon_ship_detected.tiff  ship_new_test_horizon_vis.tiff  three_ships_horizon-e2e_res.tiff  three_ships_horizon_horizon.tiff  three_ships_horizon_horizon_ship_detected.tiff  three_ships_horizon_horizon_vis.tiff
viact/: __main__.py  horizon_detector.py  image_io.py  ship_detector.py  utils.py
viact/clis/: opencv.py
