[tool.poetry]
name = "viact"
version = "0.1.0"
description = "CV test by viAct"
authors = ["indigoYoshimaru <phungkhanhlinh.iu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.12.3"
opencv-python = "^4.10.0.84"
pydantic = "^2.8.2"
loguru = "^0.7.2"
numpy = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
viact = "viact.__main__:app"
